--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,9 @@
 @import url('typography.css');
 @import url('utilities.css');
 
+/* Gloval Layout */
+@import url('layout.css');
+
 /* Components */
 @import url('components/buttons.css');
 @import url('components/cards.css');
