--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,7 @@
 @import url('layout.css');
 
 /* Components */
+@import url('components/grid.css');
 @import url('components/buttons.css');
 @import url('components/cards.css');
 @import url('components/forms.css');
